Release v0.1.4: 完善全文检索功能，优化系统架构